dda 알고리즘 적용
1

--- a/RayCasting/RayCasting.vcxproj.filters
+++ b/RayCasting/RayCasting.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="map.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="ray.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="player.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="defs.h">
@@ -45,6 +51,12 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="map.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="ray.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="player.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
